--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,8 @@ body {
 }
 
 .c-button {
+  margin: 0 auto;
+  display: block;
   font-family: Verdana, sans-serif;
   appearance: none;
   border: 0;
@@ -32,6 +34,7 @@ body {
   color: black;
   padding: 8px 16px;
   font-size: 17px;
+
 }
 
 .main-text {
@@ -99,7 +102,7 @@ body {
     -ms-flex: 0 0 33.33333%;
     flex: 0 0 33.33333%;
     max-width: 33.33333%; }
- }
+}
 
 /*"Иконки"*/
 .services {
@@ -122,12 +125,12 @@ body {
 }
 .services .icon span {
   font-size: 50px;
-  margin-left: 10px;
+  margin-left:2px;
   margin-top: 25px;
   color: #fff; }
 
 .services:hover .icon {
-  /* отвечает за цает фона иконок при наведении мышью */
+  /* отвечает за цвет фона иконок при наведении мышью */
   background: #daa592; }
 
 .cover {
@@ -164,12 +167,10 @@ body {
   /* отвечает за фон под фильтрами */
   background: bisque;}
 
-
 .sections {
   /* отвечает за отступы между блоками */
   padding: 6em 0;
   position: relative; }
-
 
 .footer {
   font-family: Verdana, sans-serif;
@@ -197,4 +198,15 @@ body {
   text-decoration: none;
   text-transform:uppercase;
   border-radius: 10px
+}
+
+.rows {
+  display: flex;
+  text-align: center;
+}
+
+.column {
+  flex: 33.33%;
+  padding: 5px;
+  margin-bottom: 75px
 }
